// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExerciseQuestion matches snapshot 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        />
        
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="continue-btn"
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders Re-submit button 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-selected"
        >
          <input
            checked={true}
            className="answer-input-box"
            disabled={false}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Selected Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-incorrect"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <div
                className="sc-gKXOVf dWxWHr"
              >
                <span>
                  Incorrect Answer
                </span>
              </div>
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        />
        
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="submit-answer-btn"
          disabled={false}
          onClick={[Function]}
        >
          Re-submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders Save button 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-selected"
        >
          <input
            checked={true}
            className="answer-input-box"
            disabled={false}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Selected Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-incorrect"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <div
                className="sc-gKXOVf dWxWHr"
              >
                <span>
                  Incorrect Answer
                </span>
              </div>
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        />
        
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="submit-answer-btn"
          disabled={false}
          onClick={[Function]}
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders Submit & continue button 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-selected"
        >
          <input
            checked={true}
            className="answer-input-box"
            disabled={false}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Selected Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-incorrect"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <div
                className="sc-gKXOVf dWxWHr"
              >
                <span>
                  Incorrect Answer
                </span>
              </div>
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        />
        
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="submit-answer-btn"
          disabled={false}
          onClick={[Function]}
        >
          Submit & continue
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders all attempts remaining 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        >
          <div>
            2
             attempt
            s
             left
          </div>
        </span>
        
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="continue-btn"
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders continue button (unused?) 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled answer-incorrect"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <div
                className="sc-gKXOVf dWxWHr"
              >
                <span>
                  Incorrect Answer
                </span>
              </div>
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        />
        
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="continue-btn"
          onClick={[Function]}
        >
          Continue
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders detailed solution and published comments 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body has-correct-answer has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled answer-correct"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <div
                className="sc-gKXOVf QPaPs"
              >
                <span>
                  Correct Answer
                </span>
              </div>
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled answer-incorrect"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <div
                className="sc-gKXOVf dWxWHr"
              >
                <span>
                  Incorrect Answer
                </span>
              </div>
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        />
        <div>
          <strong>
            Feedback:
          </strong>
           
          Teacher feedback
        </div>
        <div>
          <strong>
            Detailed solution:
          </strong>
           
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "A detailed solution",
              }
            }
          />
        </div>
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="continue-btn"
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders free response 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      className="free-response"
    >
      A free response
    </div>
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        />
        
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="continue-btn"
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders no attempts remaining 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer disabled answer-incorrect"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={true}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <div
                className="sc-gKXOVf dWxWHr"
              >
                <span>
                  Incorrect Answer
                </span>
              </div>
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        />
        
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="continue-btn"
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExerciseQuestion renders some attempts remaining 1`] = `
<div
  data-test-id="student-exercise-question"
>
  <div
    className="sc-iBkjds kXIpML openstax-question step-card-body has-incorrect-answer"
    data-question-number={1}
    data-test-id="question"
  >
    <div
      className="question-stem"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Is this a question?",
        }
      }
      data-question-number={1}
    />
    <div
      aria-label="Answer choices"
      className="answers-table"
      role="radiogroup"
    >
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-0"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-0"
          >
            <span
              aria-label="Choice A:"
              className="answer-letter-wrapper"
              data-answer-choice="A"
              data-test-id="answer-choice-A"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "True",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
      <div
        className="openstax-answer"
      >
        <section
          className="answers-answer answer-incorrect"
        >
          <input
            checked={false}
            className="answer-input-box"
            disabled={false}
            id="1-option-1"
            name="1-options"
            onChange={[Function]}
            type="radio"
          />
          <label
            className="answer-label"
            htmlFor="1-option-1"
          >
            <span
              aria-label="Choice B:"
              className="answer-letter-wrapper"
              data-answer-choice="B"
              data-test-id="answer-choice-B"
            />
            <div
              aria-atomic="true"
              aria-live="polite"
              className="answer-answer"
              role="status"
            >
              <div
                className="sc-gKXOVf dWxWHr"
              >
                <span>
                  Incorrect Answer
                </span>
              </div>
              <span
                className="answer-content"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "False",
                  }
                }
              />
            </div>
          </label>
        </section>
      </div>
    </div>
  </div>
  <div
    className="sc-ftvSup ihVfvz step-card-footer"
  >
    <div
      className="step-card-footer-inner"
    >
      <div
        className="points"
        role="status"
      >
        <strong>
          Points: 
          1.0
        </strong>
        <span
          className="attempts-left"
        >
          <div>
            1
             attempt
            
             left
          </div>
        </span>
        
      </div>
      <div
        className="controls"
      >
        <button
          className="sc-bczRLJ fLTvYy"
          data-test-id="continue-btn"
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;
